--- a/apps/editor/src/components/PropertyTabs/PropertyTabs.module.scss
+++ b/apps/editor/src/components/PropertyTabs/PropertyTabs.module.scss
@@ -1,12 +1,10 @@
-.vertical-tabs {
-  .panel {
-    width: 240px;
-    transition: all .1s ease-in-out;
+.property-tabs {
+  width: 260px;
+  transition: all .1s ease-in-out;
 
 
-    &--fold {
-      width: 0;
-    }
+  &--fold {
+    width: 10px;
   }
 
   .arrow {
@@ -18,20 +16,20 @@
       bottom: 0;
       left: 0;
       background-color: #ffffff;
-      box-shadow: 20px 0 30px 0 rgb(0 0 0 / 10%);
-      border-radius: 0 50px 50px 0;
+      box-shadow: -20px 0 30px 0 rgb(0 0 0 / 10%);
+      border-radius: 50px 0 0 50px;
     }
 
     &::after {
       content: '';
       position: absolute;
       top: 50%;
-      right: 50%;
+      left: 40%;
       transform: translateY(-50%);
       width: 0;
       height: 0;
       border: 6px solid transparent;
-      border-right: 6px solid #a1a6b3;
+      border-left: 6px solid #a1a6b3;
     }
   }
 }
